# szx82

./: .gitignore  README.md  pyproject.toml  setup.py
src/szx82/: colab_train.ipynb
src/szx82/core/: tools.py
src/szx82/models/: model_env.py  model_shell.py  project_shell.py
src/szx82/models/bert/: re_train.py  train.py  train_again.py
src/szx82/models/bert/cls/: model.py  train.py  trainings.py
src/szx82/models/bert/msk/: model.py  trainings.py
src/szx82/models/bert/pre/: model.py  notebook.ipynb  train.py  trainings.py
szc82/: colab_train.ipynb
szx82/: colab_train.ipynb
szx82.egg-info/: PKG-INFO  SOURCES.txt
szx82/core/: tools.py
szx82/models/: model_env.py  model_shell.py  project_shell.py
szx82/models/bert/: dataset.py
szx82/models/bert/cls/: model.py  trainings.py
szx82/models/bert/msk/: model.py  train.py
szx82/models/bert/pre/: model.py  notebook.ipynb  train.py  trainings.py
tests/: filterout_noise.ipynb
