[build-system]
requires = [
    "hatchling >= 1.26",
]
build-backend = "hatchling.build"

[project]
name = "szx82"
version = "0.1"
authors = [
  { name="sz", email="stefan.zarenmbinski@gmail.com" },
]
description = "colab trainer"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stefanzarembinski/szx82"
Issues = "https://github.com/stefanzarembinski/szx82/issues"